feat: restructure website with new courses, faq, and contact pages

--- a/src/about.html
+++ b/src/about.html
@@ -2,81 +2,81 @@
 <main class="app-main">
   @@include('partials/layouts/hero.html', { "title": "من نحن" });
   <div class="app-main-content">
-    <section class="about-section">
+    <section class="about-section mb-5">
       <div class="container">
-        <div
-          class="row pb-4 row-cols-1 row-cols-lg-2 g-4 align-items-center"
-        >
-          <div class="mt-0 col">
-            <h3>قصتنا</h3>
+        <div class="row  align-items-center">
+          <div class="col-md-6">
+            <h3>عن المعهد</h3>
             <p>
-              هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
-              سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات
-              في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم لأنها
-              تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً عن استخدام "هنا يوجد
-              محتوى نصي، هنا يوجد محتوى نصي" فتجعلها تبدو (أي الأحرف) وكأنها نص
-              مقروء. العديد من برامح النشر المكتبي وبرامح تحرير صفحات الويب
-              تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص، وإذا قمت بإدخال
-              "lorem ipsum" في أي محرك بحث ستظهر العديد من المواقع الحديثة العهد
-              في نتائج البحث. على مدى السنين ظهرت نسخ جديدة ومختلفة من نص لوريم
-              إيبسوم، أحياناً عن طريق الصدفة، وأحياناً عن عمد كإدخال بعض
-              العبارات الفكاهية إليها.
-            </p>
+              يعتبر معهد التميز الكندي العالي للغات والحاسب الآلي من المعاهد المتميزة بمنطقة نجران. حيث يخدم النساء في
+              الوقت الحالي
+              وبأذن الله سيكون هناك فرع اخر يخدم الابناء والرجال حيث سيكون منظومة علمية متكاملة تخدم جميع فئات المجتمع،
+              ويسعى معهد
+              التميز الكندي الى مواكبة التطورات الحديثة والمجتمعية حيث يتفاعل مع احتياجات المجتمع والسوق بطرحها الى
+              العديد من
+              الدورات المناسبة التي يحتاج اليها سوق العمل سواء تطوير اداري او ذاتي او مهني. وفي الأيام الأخيرة تم افتتاح
+              عدة مجالات
+              بعد وضع دراسة لاحتياجات العملاء وايضا بعد طرح رؤية 2030 من قبل ولاة الأمور. منها مجال الفنون التشكيلية،
+              والخياطة،
+              التجميل بشقيه من مكياج وتسريحات، التطوير الاجتماعي، صيانة التقنيات ، وفي الأيام القادمة سيكون هناك فتح
+              مجالين وهي
+              صناعة العطور وايضا فن الطبخ والطهي . وقدتم اختيار هذه المجالات للمساعدة المرأة السعودية ان تكون امرأة ملمة
+              سواء في
+              القطاع الحكومي او القطاع الخاص ودعمها لتكون فاعلة في مجتمع متطور وتكون لها بصمة في مجال </p>
           </div>
-          <div class="mt-0 col text-center">
-            <img src="assets/images/favicon.png" alt="" />
-          </div>
-        </div>
-        <hr />
-        <div class="row pt-4 row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-          <div class="feature col">
-            <div class="feature-icon mb-3">
-              <img src="assets/images/favicon.png" alt="" />
-            </div>
-            <h3 class="text-body-emphasis">الرسالة</h3>
-            <p>
-              هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
-              سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات
-              في الصفحة التي يقرأها.
-            </p>
-            <a href="#" class="icon-link">
-              اتصل بنا
-              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
-            </a>
-          </div>
-          <div class="feature col">
-            <div class="feature-icon mb-3">
-              <img src="assets/images/favicon.png" alt="" />
-            </div>
-            <h3 class="text-body-emphasis">الرويا</h3>
-            <p>
-              هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
-              سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات
-              في الصفحة التي يقرأها.
-            </p>
-            <a href="#" class="icon-link">
-              اتصل بنا
-              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
-            </a>
-          </div>
-          <div class="feature col">
-            <div class="feature-icon mb-3">
-              <img src="assets/images/favicon.png" alt="" />
-            </div>
-            <h3 class="text-body-emphasis">الهدف</h3>
-            <p>
-              هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
-              سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات
-              في الصفحة التي يقرأها.
-            </p>
-            <a href="#" class="icon-link">
-              اتصل بنا
-              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
-            </a>
+          <div class="col-md-6">
+            <img src="assets/images/about.jpg" alt="about" />
           </div>
         </div>
       </div>
     </section>
+    <section class="about-section">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="feature-box h-100">
+              <div class="feature-icon mb-3">
+                <i class="hgi hgi-stroke hgi-eye"></i>
+              </div>
+              <h3 class="text-body-emphasis">الرؤية</h3>
+              <p>الريادة في التنمية البشرية تدريب وتطوير.</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="feature-box h-100">
+              <div class="feature-icon mb-3">
+                <i class="hgi hgi-stroke hgi-sent"></i>
+              </div>
+              <h3 class="text-body-emphasis">الرسالة</h3>
+              <p>نقدم التدريب والتطوير والتأهيل بطرق مختلفة وبسائل تقنية حديثة متواكبة مع رؤية 2030 على يد خبراء بكفاءة
+                وجودة عالية
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="feature-box h-100 ">
+              <div class="feature-icon mb-3">
+                <i class="hgi hgi-stroke hgi-activity-03"></i>
+              </div>
+              <h3 class="text-body-emphasis">الجودة</h3>
+              <p>وضع اهداف ثابته للاحتياج التدريبي والنهوض بعملية التدريب وفق رؤية 2030.</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="feature-box h-100 ">
+              <div class="feature-icon mb-3">
+                <i class="hgi hgi-stroke hgi-activity-03"></i>
+              </div>
+              <h3 class="text-body-emphasis">فلسفة المعهد</h3>
+              <p>البشر يبذلون الجهد في الترفية والمتعة ونحن نعتقد ان حياة الانسان لها قيمة اعظم فنساهم في اثباتها ورفعها
+                .</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Partners Section -->
+    @@include('partials/sections/partners.html', { "classes": "", "showBanner": false, "title": "شركاء النجاح"})
   </div>
 </main>
 @@include('partials/layouts/footer.html');
