--- a/src/contact.html
+++ b/src/contact.html
@@ -2,62 +2,90 @@
 <main class="app-main">
   @@include('partials/layouts/hero.html', { "title": "تواصل معنا" });
   <div class="app-main-content">
-    <section class="contact-section">
+    <section class="contact-section mb-5">
       <div class="container">
-        <div class="row row-cols-1 row-cols-lg-2">
-          <div class="contact-info">
-            <h2 class="mb-4">تواصل معنا</h2>
-            <ul class="p-0">
-              <li>
-                @@include('partials/icon.html', { "name": "map-marker-alt.svg",
-                "classes" : "me-2" });
-                <p>
-                  الطريق الدائري الجنوبي حي العزيزية، الرياض ، المملكة العربية
-                  السعودية .
-                </p>
-              </li>
-              <li>
-                @@include('partials/icon.html', { "name": "mobile-alt.svg",
-                "classes" : "me-2" });
-                <p><a href="tel:+9665000000000">+9665000000000</a></p>
-              </li>
-              <li>
-                @@include('partials/icon.html', { "name": "envelope.svg",
-                "classes" : "me-2" });
-                <p>
-                  <a href="mailto:info@realty-stations.com"
-                    >info@realty-stations.com</a
-                  >
-                </p>
-              </li>
-            </ul>
+        <div class="section-title">
+          <h2>تواصل معنا</h2>
+          <p>نساعد في تمهيد الطريق معاً كفريق واحد</p>
+        </div>
+        <div class="row g-4">
+
+          <div class="col-md-6 col-lg-4">
+            <div class="contact-box h-100">
+              <div class="contact-icon mb-3">
+                <img src="assets/images/icons/call.png" alt="call" />
+              </div>
+              <h3>اتصال هاتفي</h3>
+              <p>
+                المدربات - المتدربات / الطالبات
+                من الأحد إلى الخميس
+                من الساعة 8 صباحاً إلى 8 مساءً
+              </p>
+              <ul>
+                <li><a href="tel:0175224000">0175224000</a></li>
+                <li><a href="tel:0533349946">0533349946</a></i>
+              </ul>
+            </div>
           </div>
-          <div class="contact-form">
-            <h3 class="mb-4">اترك رسالة</h3>
-            <form>
-              <div class="mb-3">
-                <labe class="form-label">
-                  <input type="text" class="form-control" placeholder="الاسم" />
-                </labe>
+          <div class="col-md-6 col-lg-4">
+            <div class="contact-box h-100">
+              <div class="contact-icon mb-3">
+                <img src="assets/images/icons/email.png" alt="call" />
               </div>
-              <div class="mb-3">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="البريد الالكترونى"
-                />
+              <h3>البريد الالكترونى</h3>
+              <p>
+                المدربات - المتدربات / الطالبات
+                من الأحد إلى الخميس
+                من الساعة 8 صباحاً إلى 8 مساءً
+              </p>
+              <ul>
+                <li><a href=":alcanadi@tcw.com.sa">alcanadi@tcw.com.sa</a></i>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="contact-box h-100">
+              <div class="contact-icon mb-3">
+                <img src="assets/images/icons/whatsap.png" alt="call" />
               </div>
-              <div class="mb-3">
+              <h3>واتساب</h3>
+              <p>
+                المدربات - المتدربات / الطالبات
+                من الأحد إلى الخميس
+                من الساعة 8 صباحاً إلى 8 مساءً
+              </p>
+              <ul>
+                <li><a href="tel:0175224000">0175224000</a></li>
+                <li><a href="tel:0533349946">0533349946</a></i>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact-form">
+      <div class="container">
+        <div class="contact-form_wrapper">
+          <h3 class="mb-4">اترك رسالة</h3>
+          <form>
+            <div class="mb-3">
+              <labe class="form-label">
+                <input type="text" class="form-control" placeholder="الاسم" />
+              </labe>
+            </div>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <input type="email" class="form-control" placeholder="البريد الالكترونى" />
+              </div>
+              <div class="col-md-6 mb-3">
                 <input type="tel" class="form-control" placeholder="الجوال" />
               </div>
-              <div class="mb-3">
-                <textarea class="form-control" placeholder="الرسالة"></textarea>
-              </div>
-              <div class="d-grid gap-2">
-                <button class="btn btn-primary" type="button">ارسال</button>
-              </div>
-            </form>
-          </div>
+            </div>
+            <div class="mb-3">
+              <textarea class="form-control" placeholder="الرسالة"></textarea>
+            </div>
+            <button class="btn btn-secondary" type="button">ارسال</button>
+          </form>
         </div>
       </div>
     </section>
