feat: add single course page and enhance UI components
refactor: update swiper configuration and styles
style: improve responsive design and layout consistency
docs: add about section content and update course data

--- a/src/about.html
+++ b/src/about.html
@@ -2,35 +2,9 @@
 <main class="app-main">
   @@include('partials/layouts/hero.html', { "title": "من نحن" });
   <div class="app-main-content">
-    <section class="about-section mb-5">
-      <div class="container">
-        <div class="row  align-items-center">
-          <div class="col-md-6">
-            <h3>عن المعهد</h3>
-            <p>
-              يعتبر معهد التميز الكندي العالي للغات والحاسب الآلي من المعاهد المتميزة بمنطقة نجران. حيث يخدم النساء في
-              الوقت الحالي
-              وبأذن الله سيكون هناك فرع اخر يخدم الابناء والرجال حيث سيكون منظومة علمية متكاملة تخدم جميع فئات المجتمع،
-              ويسعى معهد
-              التميز الكندي الى مواكبة التطورات الحديثة والمجتمعية حيث يتفاعل مع احتياجات المجتمع والسوق بطرحها الى
-              العديد من
-              الدورات المناسبة التي يحتاج اليها سوق العمل سواء تطوير اداري او ذاتي او مهني. وفي الأيام الأخيرة تم افتتاح
-              عدة مجالات
-              بعد وضع دراسة لاحتياجات العملاء وايضا بعد طرح رؤية 2030 من قبل ولاة الأمور. منها مجال الفنون التشكيلية،
-              والخياطة،
-              التجميل بشقيه من مكياج وتسريحات، التطوير الاجتماعي، صيانة التقنيات ، وفي الأيام القادمة سيكون هناك فتح
-              مجالين وهي
-              صناعة العطور وايضا فن الطبخ والطهي . وقدتم اختيار هذه المجالات للمساعدة المرأة السعودية ان تكون امرأة ملمة
-              سواء في
-              القطاع الحكومي او القطاع الخاص ودعمها لتكون فاعلة في مجتمع متطور وتكون لها بصمة في مجال </p>
-          </div>
-          <div class="col-md-6">
-            <img src="assets/images/about.jpg" alt="about" />
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="about-section">
+    <!-- About -->
+    @@include('partials/sections/about.html')
+    <section class="features-section">
       <div class="container">
         <div class="row g-4">
           <div class="col-md-6">
