--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <!-- Hero Section -->
   @@include('partials/sections/hero-home.html')
  
+  <!-- About -->
+  @@include('partials/sections/about.html')
+
   <!-- Featured courses -->
   @@include('partials/sections/featured-courses.html')
 
