--- a/src/courses.html
+++ b/src/courses.html
@@ -4,7 +4,7 @@
   <div class="app-main-content">
     <section class="filter mb-5">
       <div class="container">
-        <form class="row gx-3 gy-2 align-items-center">
+        <form class="row g-4 align-items-center">
           <div class="col">
             <label class="visually-hidden" for="name">بحث</label>
             <input type="text" class="form-control" placeholder="اسم الدورة...">
@@ -18,8 +18,8 @@
               <option value="3">Three</option>
             </select>
           </div>
-          <div class="col-auto">
-            <button type="submit" class="btn btn-primary">بحث</button>
+          <div class="col-12 col-sm-auto">
+            <button type="submit" class="btn btn-primary w-100">بحث</button>
           </div>
         </form>
       </div>
